[tool.poetry]
name = "pytt"
version = "0.1.0"
description = "Python Time Tracker"
authors = ["pajecawav <pajecawav@gmail.com>"]

readme = "README.md"

repository = "https://github.com/pajecawav/pytt"
homepage = "https://github.com/pajecawav/pytt"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"

[tool.poetry.scripts]
tt = 'pytt.main:main'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
